src/styles/components/header.menu.scss
.menu {
  position: relative;

  &:hover {
    cursor: pointer;
  }

  .header-menu {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;

    .name {
      margin: 0px 16px;
      color: #0aa6bf;
      font-weight: bolder;
      font-size: 1.4rem;
      text-transform: capitalize;

      @media (max-width: 768px) {
        display: none;
      }
    }
    .picture {
      width: 40px;
      height: 40px;
      border-radius: 40px;
      background-color: white;
      background-image: url(https://lokafy.com/static/images/logos/logo-blue-favicon.png?a53062112ebe);
      background-size: 40px 40px;
      background-position: center;
    }
  
    svg {
      width: 20px;
      fill: #0aa6bf;
      transform: rotate(90deg);
    }
  }
  .menu-items {
    position: absolute;
    top: 60px;
    right: 0px;
    background-color: white;
    box-shadow: 0px 5px 10px #bababa;
    width: 300px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
  }
}

